--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* Chat-specific styles */
 .chatResults {
   scroll-behavior: smooth;
+  background-color:azure;
 }
 
 .typingBarSettings {
@@ -9,18 +10,21 @@
   width: 100%;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
+.user-message{
+  background-color: #000080;
+  color: white;
+}
+.bot-message {
+  background-color: #18dcdc;
+  color: black;
+}
 
-.heightSeter {
-  min-height: 20px;
-  max-height: 400px;
+.sendButton {
+  background-color: #000080;
 }
 
 .inputSettings {
   transition: all 0.2s ease;
-}
-
-.inputSettings:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .sendButton {
